--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,15 @@ button:hover {
   background-color: #0d6efdcc;
 }
 
+.cookie-button-group button {
+  width: 170px;
+  font-size: 0.8rem;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -68,10 +77,11 @@ button:hover {
     width: 25vw;
     font-size: 0.8rem;
   }
-
-  .hero {
-    /* background-image: url("https://www.codere.es/landingPage/assets/images/mobileWB.webp"); */
+  .cookie-button-group button {
+    width: 200px;
+    margin: auto;
   }
+
   .avner {
     margin-top: 1rem;
     box-shadow: rgba(50, 50, 93, 0.2) 0px 30px 60px -4px inset,
@@ -137,22 +147,16 @@ button:hover {
 .ReactSwipeButton,
 .ReactSwipeButton * {
   -webkit-touch-callout: none;
-
   /* iOS Safari */
   -webkit-user-select: none;
-
   /* Chrome/Safari/Opera */
   -khtml-user-select: none;
-
   /* Konqueror */
   -moz-user-select: none;
-
   /* Firefox */
   -ms-user-select: none;
-
   /* Internet Explorer/Edge */
   user-select: none;
-
   /* Non-prefixed version, currently
                                     not supported by any browser */
 }
@@ -167,13 +171,7 @@ button:hover {
   width: 100%;
   display: flex;
   height: 100%;
-
-  /* background: #0055fe; */
   border-radius: 50px;
-
-  /* position: relative; */
-
-  /* box-shadow: inset 1px 1px 4px rgba(255, 255, 255, 0.1); */
   overflow: hidden;
 }
 
